web-teller.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ebanking
  name: web-teller
spec:
  selector:
    matchLabels:
      app: web-teller
  minReadySeconds: 10
  replicas: 1
  template:
    metadata:
      labels:
        app: web-teller
    spec:
      nodeSelector:
        role: ibmb
      containers:
        - name: web-teller
          image: frolvlad/alpine-glibc
          imagePullPolicy: IfNotPresent
          command: [
            "/bin/sh"
          ]
          args: [
            "-c",
            "cd /app; chmod +x /app/web-teller; /app/web-teller --server_address=0.0.0.0:8080"
          ]
          volumeMounts:
            - name: app-dir
              mountPath: /app
            - name: tz-config
              mountPath: /etc/localtime
          ports:
            - containerPort: 8080
              name: internal-port
      volumes:
        - name: app-dir
          hostPath:
            path: /opt/web-teller
            type: DirectoryOrCreate
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Jakarta

---

apiVersion: v1
kind: Service
metadata:
  namespace: ebanking
  name: web-teller
spec:
  selector:
    app: web-teller
  ports:
  - protocol: TCP
    port: 8080
    targetPort: internal-port
