api-gateway.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ebanking
  name: api-gateway-web-teller
spec:
  selector:
    matchLabels:
      app: api-gateway-web-teller
  minReadySeconds: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway-web-teller
    spec:
      imagePullSecrets:
        - name: nexus
      containers:
        - name: api-gateway-web-teller
          image: nexus.pactindo.com:8443/ebanking/api-gateway:1.0.20210708
          imagePullPolicy: IfNotPresent
          args: ["--server_address", "0.0.0.0:8080"]
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
          ports:
            - containerPort: 8080
              name: internal-port
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Jakarta

---

apiVersion: v1
kind: Service
metadata:
  namespace: ebanking
  name: api-gateway-web-teller
spec:
  selector:
    app: api-gateway-web-teller
  ports:
    - protocol: TCP
      port: 8080
      targetPort: internal-port

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: ebanking
  name: api-gateway-web-teller
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"

spec:
  tls:
    - secretName: ebanking-tls
  rules:
    - http:
        paths:
          - path: /web-teller/api
            backend:
              serviceName: api-gateway-web-teller
              servicePort: 8080
